# making-semiconductors

./: .gitignore  pyproject.toml
.github/workflows/: deploy-slides.yml
docs/: Makefile  backend.md  conf.py  design.md  frontend.md  glossary.md  index.md  industry.md  overview.md  sources.md
docs/superpowers/plans/: 2026-07-18-semiconductor-slides.md
docs/superpowers/specs/: 2026-07-18-semiconductor-slides-design.md
research/: 2026-07-18-advanced-packaging-latest-trends.md  2026-07-18-semiconductor-gaps-research.md
slides/: 00-intro.md  01-design.md  02-frontend.md  03-backend.md  04-industry.md  04-trends.md  05-industry.md  Makefile  conf.py  index.md  reference.md
slides/_static/: custom.scss
slides/_static/css/: highlight.css
