[project]
name = "making-semiconductors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "furo>=2025.12.19",
    "libsass>=0.23.0",
    "myst-parser>=5.1.0",
    "sphinx>=9.1.0",
    "sphinx-oceanid>=0.2.0",
    "sphinx-revealjs>=3.2.1",
]

[dependency-groups]
dev = [
    "sphinx-autobuild>=2025.8.25",
]
